[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jsonrepair"
version = "0.1.0"
description = "Repair invalid JSON documents"
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.9"
authors = [
    {name = "Jos de Jong"},
]

[project.scripts]
jsonrepair = "jsonrepair.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
